# OS-Electoral

./: .dockerignore  .env.example  .env.functional.example  .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  RTK.md  alembic.ini  compose.yaml  feature_list.json  pyproject.toml  requirements-extraction.txt  skills-lock.json
.github/: campaignos-security-policy.json  dependabot.yml
architecture/: program-state.json
archive/: README.md
backend/: Dockerfile  README.md
campaign/: charter.md  current-state.md  decision-log.md  risks.md
config/: pilot-sources.yaml
content/: README.md
core/: __init__.py  application_service.py  approval_ledger.py  audit_observability.py  authorization_policy.py  campaign_workspace.py  candidate_brand.py  daily_workflow.py  extraction_citation.py  persistence_audit.py  repository_transaction.py
docs/: adversarial-integration-harness.md  approval-inbox-ledger.md  audit-observability-read-model.md  authorization-policy-boundary.md  campaign-workspaces.md  candidate-brand-workspace.md  daily-operating-workflow.md  executable-architecture.md  extraction-citation-contracts.md  operator-runbook-release-gates.md  persistence-audit-boundary.md  program-architecture.md  read-only-service-contracts.md  repository-transaction-boundary.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
media/: README.md
operations/: approvals.md  dashboard.md  weekly-plan.md
program/: autoskills-review.md  context7-evidence.md  current-state-assessment.md  decision-log.md  eval-catalog.json  iteration-log.md  program-state.json  (+6 more)
(+545 files in other folders)
