[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "campaignos"
version = "0.1.0"
description = "CampaignOS campaign operating system"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {text = "Proprietary"}
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "psycopg[binary]==3.3.4",
  "PyJWT[crypto]==2.13.0",
  "SQLAlchemy==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "jsonschema>=4.23,<5",
  "mypy>=1.19,<2",
  "pip-audit==2.10.1",
  "playwright==1.61.0",
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  "ruff>=0.14,<1",
]

[tool.setuptools]
package-dir = {"" = "backend/src"}

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["campaignos*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests", "backend/tests"]
pythonpath = [".", "backend/src"]
markers = [
  "postgres: requires an isolated PostgreSQL test database",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests", "core", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"backend/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["backend/src", "."]
packages = ["campaignos"]

[tool.coverage.run]
branch = true
source = ["campaignos"]

[tool.coverage.report]
fail_under = 90
show_missing = true
